<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <POU Name="FB_DataFlowManagement" Id="{f7d5b7fb-9a05-4d0d-a367-7c2a7531c7d8}" SpecialFunc="None">
    <Declaration><![CDATA[FUNCTION_BLOCK FB_DataFlowManagement
VAR CONSTANT
END_VAR
//NovRam
VAR RETAIN
	NovRamData:ST_NovRam;
END_VAR
VAR_INPUT
END_VAR
VAR_OUTPUT
END_VAR
VAR
	//Data To NovRam
	fbDataToNovRam:ARRAY[0..GVL.Max_IndexNum-1] OF FB_DataToNovRam;//模擬全部Index添加資料用
	
	//NovRam To FileRingBuffer
	fbNovRamToFileRingBuffer:ARRAY [0..6] OF ARRAY[0..GVL.NovRamBufferRatio-1] OF FB_NovRamToFileRingBuffer;
	//fbNovRamToFileRingBuffer_AlarmHistory:ARRAY [0..NovRamBufferRatio-1] OF FB_NovRamToFileRingBuffer;
	//fbNovRamToFileRingBuffer_ProductionHistory:ARRAY [0..NovRamBufferRatio-1] OF FB_NovRamToFileRingBuffer;
	
	//FileRingBuffer To DataBase
	fbFileRingBufferToDB:ARRAY [0..6] OF ARRAY [0..GVL.NovRamBufferRatio-1] OF ARRAY[0..GVL.FileRingBufferRatio-1] OF FB_FileRingBufferToDB;
	//fbFileRingBufferToDB_AlarmHistory:ARRAY [0..NovRamBufferRatio-1] OF ARRAY[0..FileRingBufferRatio-1] OF FB_FileRingBufferToDB;
	//fbFileRingBufferToDB_ProductionHistory:ARRAY [0..NovRamBufferRatio-1] OF ARRAY[0..FileRingBufferRatio-1] OF FB_FileRingBufferToDB;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[]]></ST>
    </Implementation>
    <LineIds Name="FB_DataFlowManagement">
      <LineId Id="9" Count="0" />
    </LineIds>
  </POU>
</TcPlcObject>